Codigo/Parser/LL1XccParser.java
// Generated from LL1Xcc.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LL1XccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, EXTENDS=2, ABRCHAVE=3, PTVIR=4, FECHCHAVE=5, INT=6, STRING=7, 
		ABRCOL=8, FECHCOL=9, VIRG=10, CONSTRUCTOR=11, ABRPAR=12, FECHPAR=13, BREAK=14, 
		ATR=15, PRINT=16, READ=17, RETURN=18, SUPER=19, IF=20, ELSE=21, FOR=22, 
		PONTO=23, NEW=24, MENOR=25, MAIOR=26, MENORIG=27, MAIORIG=28, IGUAL=29, 
		DIFER=30, OPMAIS=31, OPMENOS=32, OPVEZES=33, OPDIV=34, OPMOD=35, NULL=36, 
		THEN=37, INTCONSTANT=38, STRINGCONSTANT=39, IDENT=40, WS=41;
	public static final int
		RULE_program = 0, RULE_classlist = 1, RULE_classlist2 = 2, RULE_classdecl = 3, 
		RULE_classdecl2 = 4, RULE_classbody = 5, RULE_classbody1 = 6, RULE_classbody2 = 7, 
		RULE_classbody3 = 8, RULE_vardecl = 9, RULE_dec = 10, RULE_intstringident = 11, 
		RULE_cols = 12, RULE_vardecl1 = 13, RULE_constructdecl = 14, RULE_methoddecl = 15, 
		RULE_methodbody = 16, RULE_paramlist = 17, RULE_paramlist1 = 18, RULE_statement = 19, 
		RULE_intstring = 20, RULE_virgidentcols = 21, RULE_statement2 = 22, RULE_statement3 = 23, 
		RULE_expralocexpr = 24, RULE_atribstat = 25, RULE_printstat = 26, RULE_readstat = 27, 
		RULE_returnstat = 28, RULE_returnstat1 = 29, RULE_superstat = 30, RULE_ifstat = 31, 
		RULE_ifstat1 = 32, RULE_forstat = 33, RULE_forstat1 = 34, RULE_forstat2 = 35, 
		RULE_statlist = 36, RULE_statlist1 = 37, RULE_lvalue = 38, RULE_lvalue2 = 39, 
		RULE_alocexpression = 40, RULE_alocexpression2 = 41, RULE_alocexpression3 = 42, 
		RULE_alocexpression4 = 43, RULE_alocexpression5 = 44, RULE_expression = 45, 
		RULE_expression2 = 46, RULE_expresion3 = 47, RULE_numexpression = 48, 
		RULE_exps = 49, RULE_numexpression2 = 50, RULE_term = 51, RULE_term1 = 52, 
		RULE_unaryexpr = 53, RULE_factor = 54, RULE_arglist = 55, RULE_arglist1 = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classlist", "classlist2", "classdecl", "classdecl2", "classbody", 
			"classbody1", "classbody2", "classbody3", "vardecl", "dec", "intstringident", 
			"cols", "vardecl1", "constructdecl", "methoddecl", "methodbody", "paramlist", 
			"paramlist1", "statement", "intstring", "virgidentcols", "statement2", 
			"statement3", "expralocexpr", "atribstat", "printstat", "readstat", "returnstat", 
			"returnstat1", "superstat", "ifstat", "ifstat1", "forstat", "forstat1", 
			"forstat2", "statlist", "statlist1", "lvalue", "lvalue2", "alocexpression", 
			"alocexpression2", "alocexpression3", "alocexpression4", "alocexpression5", 
			"expression", "expression2", "expresion3", "numexpression", "exps", "numexpression2", 
			"term", "term1", "unaryexpr", "factor", "arglist", "arglist1"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'extends'", "'{'", "';'", "'}'", "'int'", "'string'", 
			"'['", "']'", "','", "'constructor'", "'('", "')'", "'break'", "'='", 
			"'print'", "'read'", "'return'", "'super'", "'if'", "'else'", "'for'", 
			"'.'", "'new'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'null'", "'then'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "EXTENDS", "ABRCHAVE", "PTVIR", "FECHCHAVE", "INT", "STRING", 
			"ABRCOL", "FECHCOL", "VIRG", "CONSTRUCTOR", "ABRPAR", "FECHPAR", "BREAK", 
			"ATR", "PRINT", "READ", "RETURN", "SUPER", "IF", "ELSE", "FOR", "PONTO", 
			"NEW", "MENOR", "MAIOR", "MENORIG", "MAIORIG", "IGUAL", "DIFER", "OPMAIS", 
			"OPMENOS", "OPVEZES", "OPDIV", "OPMOD", "NULL", "THEN", "INTCONSTANT", 
			"STRINGCONSTANT", "IDENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LL1Xcc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LL1XccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				classlist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasslistContext extends ParserRuleContext {
		public ClassdeclContext classdecl() {
			return getRuleContext(ClassdeclContext.class,0);
		}
		public Classlist2Context classlist2() {
			return getRuleContext(Classlist2Context.class,0);
		}
		public ClasslistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClasslist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClasslist(this);
		}
	}

	public final ClasslistContext classlist() throws RecognitionException {
		ClasslistContext _localctx = new ClasslistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			classdecl();
			setState(119);
			classlist2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classlist2Context extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public Classlist2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classlist2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClasslist2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClasslist2(this);
		}
	}

	public final Classlist2Context classlist2() throws RecognitionException {
		Classlist2Context _localctx = new Classlist2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_classlist2);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				classlist();
				}
				break;
			case EOF:
			case FECHCHAVE:
			case INT:
			case STRING:
			case CONSTRUCTOR:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(LL1XccParser.CLASS, 0); }
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public Classdecl2Context classdecl2() {
			return getRuleContext(Classdecl2Context.class,0);
		}
		public ClassdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClassdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClassdecl(this);
		}
	}

	public final ClassdeclContext classdecl() throws RecognitionException {
		ClassdeclContext _localctx = new ClassdeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(CLASS);
			setState(126);
			match(IDENT);
			setState(127);
			classdecl2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classdecl2Context extends ParserRuleContext {
		public ClassbodyContext classbody() {
			return getRuleContext(ClassbodyContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(LL1XccParser.EXTENDS, 0); }
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public Classdecl2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClassdecl2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClassdecl2(this);
		}
	}

	public final Classdecl2Context classdecl2() throws RecognitionException {
		Classdecl2Context _localctx = new Classdecl2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_classdecl2);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABRCHAVE:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				classbody();
				}
				break;
			case EXTENDS:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(EXTENDS);
				setState(131);
				match(IDENT);
				setState(132);
				classbody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassbodyContext extends ParserRuleContext {
		public TerminalNode ABRCHAVE() { return getToken(LL1XccParser.ABRCHAVE, 0); }
		public Classbody1Context classbody1() {
			return getRuleContext(Classbody1Context.class,0);
		}
		public Classbody2Context classbody2() {
			return getRuleContext(Classbody2Context.class,0);
		}
		public Classbody3Context classbody3() {
			return getRuleContext(Classbody3Context.class,0);
		}
		public TerminalNode FECHCHAVE() { return getToken(LL1XccParser.FECHCHAVE, 0); }
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ClassbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClassbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClassbody(this);
		}
	}

	public final ClassbodyContext classbody() throws RecognitionException {
		ClassbodyContext _localctx = new ClassbodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classbody);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(ABRCHAVE);
				setState(136);
				classbody1();
				setState(137);
				classbody2();
				setState(138);
				classbody3();
				setState(139);
				match(FECHCHAVE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(ABRCHAVE);
				setState(142);
				classlist();
				setState(143);
				classbody1();
				setState(144);
				classbody2();
				setState(145);
				classbody3();
				setState(146);
				match(FECHCHAVE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classbody1Context extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode PTVIR() { return getToken(LL1XccParser.PTVIR, 0); }
		public Classbody1Context classbody1() {
			return getRuleContext(Classbody1Context.class,0);
		}
		public Classbody1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClassbody1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClassbody1(this);
		}
	}

	public final Classbody1Context classbody1() throws RecognitionException {
		Classbody1Context _localctx = new Classbody1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_classbody1);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				vardecl();
				setState(151);
				match(PTVIR);
				setState(152);
				classbody1();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classbody2Context extends ParserRuleContext {
		public ConstructdeclContext constructdecl() {
			return getRuleContext(ConstructdeclContext.class,0);
		}
		public Classbody2Context classbody2() {
			return getRuleContext(Classbody2Context.class,0);
		}
		public Classbody2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClassbody2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClassbody2(this);
		}
	}

	public final Classbody2Context classbody2() throws RecognitionException {
		Classbody2Context _localctx = new Classbody2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_classbody2);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTRUCTOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				constructdecl();
				setState(158);
				classbody2();
				}
				break;
			case FECHCHAVE:
			case INT:
			case STRING:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classbody3Context extends ParserRuleContext {
		public MethoddeclContext methoddecl() {
			return getRuleContext(MethoddeclContext.class,0);
		}
		public Classbody3Context classbody3() {
			return getRuleContext(Classbody3Context.class,0);
		}
		public Classbody3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterClassbody3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitClassbody3(this);
		}
	}

	public final Classbody3Context classbody3() throws RecognitionException {
		Classbody3Context _localctx = new Classbody3Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_classbody3);
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				methoddecl();
				setState(164);
				classbody3();
				}
				break;
			case FECHCHAVE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public Vardecl1Context vardecl1() {
			return getRuleContext(Vardecl1Context.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitVardecl(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			dec();
			setState(170);
			vardecl1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitDec(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			intstringident();
			setState(173);
			match(IDENT);
			setState(174);
			cols();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntstringidentContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(LL1XccParser.INT, 0); }
		public TerminalNode STRING() { return getToken(LL1XccParser.STRING, 0); }
		public TerminalNode IDENT() { return getToken(LL1XccParser.IDENT, 0); }
		public IntstringidentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intstringident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterIntstringident(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitIntstringident(this);
		}
	}

	public final IntstringidentContext intstringident() throws RecognitionException {
		IntstringidentContext _localctx = new IntstringidentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_intstringident);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << IDENT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColsContext extends ParserRuleContext {
		public TerminalNode ABRCOL() { return getToken(LL1XccParser.ABRCOL, 0); }
		public TerminalNode INTCONSTANT() { return getToken(LL1XccParser.INTCONSTANT, 0); }
		public TerminalNode FECHCOL() { return getToken(LL1XccParser.FECHCOL, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public ColsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cols; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).enterCols(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LL1XccListener ) ((LL1XccListener)listener).exitCols(this);
		}
	}

	public final ColsContext cols() throws RecognitionException {
		ColsContext _localctx = new ColsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_cols);
		try {
			setState(183);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABRCOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				match(ABRCOL);
				setState(179);
				match(INTCONSTANT);
				setState(180);
				match(FECHCOL);
				setState(181);
				cols();
				}
				break;
			case PTVIR:
			case VIRG:
			case FECHPAR:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
